add swagger type
